--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "scenario-management",
+  "name": "scenario-management-v2",
   "version": "1.0.0",
   "description": "Financial Scenario Management Application",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "antd": "^5.12.8",
-    "recharts": "^2.8.0",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/node": "^20.10.5",
+    "ag-grid-community": "^34.2.0",
+    "ag-grid-react": "^34.2.0",
+    "antd": "^5.12.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.8.0",
     "typescript": "^5.3.3"
   },
   "scripts": {
